--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
@@ -108,6 +109,13 @@
     </dependency>
 
     <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+      <version>5.8.1</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
       <groupId>io.jooby</groupId>
       <artifactId>jooby-test</artifactId>
       <scope>test</scope>
@@ -123,6 +131,13 @@
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
       <version>1.4.200</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.26.3</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -141,11 +156,9 @@
             </path>
           </annotationProcessorPaths>
           <compilerArgs>
-            <compilerArg>
-              -Ajooby.debug=false
+            <compilerArg> -Ajooby.debug=false
             </compilerArg>
-            <compilerArg>
-              -Ajooby.services=true
+            <compilerArg> -Ajooby.services=true
             </compilerArg>
           </compilerArgs>
         </configuration>
