--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -127,11 +127,18 @@
       <version>4.6.1</version>
       <scope>test</scope>
     </dependency>
-    
+
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-junit-jupiter</artifactId>
       <version>4.6.1</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.radcortez.flyway</groupId>
+      <artifactId>flyway-junit5-extension</artifactId>
+      <version>1.3.0</version>
       <scope>test</scope>
     </dependency>
 
